RepMove流程增加输出目录参数

--- a/assets/config/config.json
+++ b/assets/config/config.json
@@ -3,6 +3,7 @@
     "grpcPacketSize": 10,
     "localIP": "localhost",
     "ipfsPort": 5001,
+    "storageBaseDir": ".",
     "logger": {
         "outputFileName": "cloud-agent",
         "outputDirectory": "log",
