修复调试问题

--- a/assets/config/config.json
+++ b/assets/config/config.json
@@ -1,6 +1,6 @@
 {
-    "grpcPort": 5010,
-    "grpcPacketSize": 10,
+    "id": 0,
+    "grpcListenAddress": "127.0.0.1:5010",
     "localIP": "localhost",
     "ipfsPort": 5001,
     "storageBaseDir": ".",
