--- a/assets/config/config.json
+++ b/assets/config/config.json
@@ -9,5 +9,10 @@
         "password": "123456",
         "port": 3306,
         "databaseName": "kx"
+    },
+    "rabbitMQ": {
+        "address": "127.0.0.1:5672",
+        "account": "guest",
+        "password": "guest"
     }
 }
