读写请求增加客户端IP用于判断是否与节点在同地域；配置文件增加MQ配置

--- a/assets/config/config.json
+++ b/assets/config/config.json
@@ -2,5 +2,12 @@
     "grpcPort": 5010,
     "grpcPacketSize": 10,
     "ipfsPort": 10,
-    "maxReplicateNumber": 10
+    "maxReplicateNumber": 10,
+    "localIP": "127.0.0.1",
+    "externalIP": "127.0.0.1",
+    "rabbitMQ": {
+        "address": "127.0.0.1:5672",
+        "account": "guest",
+        "password": "guest"
+    }
 }
