读写请求增加客户端IP用于判断是否与节点在同地域；配置文件增加MQ配置

--- a/assets/config/config.json
+++ b/assets/config/config.json
@@ -8,5 +8,10 @@
         "outputFileName": "cloud-agent",
         "outputDirectory": "log",
         "level": "debug"
+    },
+    "rabbitMQ": {
+        "address": "127.0.0.1:5672",
+        "account": "guest",
+        "password": "guest"
     }
 }
