修复调试问题

--- a/common/assets/confs/client.config.json
+++ b/common/assets/confs/client.config.json
@@ -24,6 +24,6 @@
         "etcdUsername": "",
         "etcdPassword": "",
         "etcdLockLeaseTimeSec": 5,
-        "submitLockRequestWithoutLease": true
+        "description": "I am a client"
     }
 }
