--- a/common/assets/confs/agent.config.json
+++ b/common/assets/confs/agent.config.json
@@ -31,6 +31,6 @@
         "etcdUsername": "",
         "etcdPassword": "",
         "etcdLockLeaseTimeSec": 5,
-        "submitLockRequestWithoutLease": true
+        "description": "I am a agent"
     }
 }
