增加ioswitch功能，准备测试代码

--- a/common/assets/confs/agent.config.json
+++ b/common/assets/confs/agent.config.json
@@ -23,7 +23,7 @@
         "vhost": "/"
     },
     "ipfs": {
-        "port": 5001
+        "address": "127.0.0.1:5001"
     },
     "distlock": {
         "etcdAddress": "127.0.0.1:2379",
