--- a/common/assets/confs/scanner.config.json
+++ b/common/assets/confs/scanner.config.json
@@ -1,5 +1,5 @@
 {
-    "minAvailableRepProportion": 0.8,
+    "ecFileSizeThreshold": 104857600,
     "nodeUnavailableSeconds": 300,
     "logger": {
         "output": "file",
