修复测试中发现的问题

--- a/common/assets/confs/agent.config.json
+++ b/common/assets/confs/agent.config.json
@@ -30,6 +30,7 @@
         "etcdUsername": "",
         "etcdPassword": "",
         "etcdLockLeaseTimeSec": 5,
-        "description": "I am a agent"
+        "randomReleasingDelayMs": 3000,
+        "serviceDescription": "I am a agent"
     }
 }
