--- a/common/assets/confs/client.config.json
+++ b/common/assets/confs/client.config.json
@@ -23,6 +23,7 @@
         "etcdUsername": "",
         "etcdPassword": "",
         "etcdLockLeaseTimeSec": 5,
-        "description": "I am a client"
+        "randomReleasingDelayMs": 3000,
+        "serviceDescription": "I am a client"
     }
 }
