增加检测节点间延迟的机制

--- a/common/assets/confs/client.config.json
+++ b/common/assets/confs/client.config.json
@@ -25,5 +25,8 @@
         "etcdLockLeaseTimeSec": 5,
         "randomReleasingDelayMs": 3000,
         "serviceDescription": "I am a client"
+    },
+    "connectivity": {
+        "testInterval": 300
     }
 }
