--- a/common/assets/confs/agent.config.json
+++ b/common/assets/confs/agent.config.json
@@ -32,5 +32,8 @@
         "etcdLockLeaseTimeSec": 5,
         "randomReleasingDelayMs": 3000,
         "serviceDescription": "I am a agent"
+    },
+    "connectivity": {
+        "testInterval": 300
     }
 }
