初步实现随机读取

--- a/common/assets/confs/agent.config.json
+++ b/common/assets/confs/agent.config.json
@@ -35,5 +35,8 @@
     },
     "connectivity": {
         "testInterval": 300
+    },
+    "downloader": {
+        "maxStripCacheCount": 100
     }
 }
