--- a/common/assets/confs/client.config.json
+++ b/common/assets/confs/client.config.json
@@ -28,5 +28,8 @@
     },
     "connectivity": {
         "testInterval": 300
+    },
+    "downloader": {
+        "maxStripCacheCount": 100
     }
 }
