选择下载节点时考虑节点延迟

--- a/common/assets/confs/agent.config.json
+++ b/common/assets/confs/agent.config.json
@@ -37,6 +37,7 @@
         "testInterval": 300
     },
     "downloader": {
-        "maxStripCacheCount": 100
+        "maxStripCacheCount": 100,
+        "highLatencyNode": 35
     }
 }
