--- a/common/assets/confs/client.config.json
+++ b/common/assets/confs/client.config.json
@@ -30,6 +30,7 @@
         "testInterval": 300
     },
     "downloader": {
-        "maxStripCacheCount": 100
+        "maxStripCacheCount": 100,
+        "highLatencyNode": 35
     }
 }
