条带预读可配

--- a/common/assets/confs/agent.config.json
+++ b/common/assets/confs/agent.config.json
@@ -38,6 +38,7 @@
     },
     "downloader": {
         "maxStripCacheCount": 100,
-        "highLatencyNode": 35
+        "highLatencyNode": 35,
+        "ecStripPrefetchCount": 1
     }
 }
