--- a/common/assets/confs/client.config.json
+++ b/common/assets/confs/client.config.json
@@ -31,6 +31,7 @@
     },
     "downloader": {
         "maxStripCacheCount": 100,
-        "highLatencyNode": 35
+        "highLatencyNode": 35,
+        "ecStripPrefetchCount": 1
     }
 }
